tests/fixtures/invalid/pow_float_bytes.py
# Cannot call pow() with Float, Bytes
x = pow(1.0, b"hello")
